<resources xmlns:tools="http://schemas.android.com/tools">>
    <string name="app_name" tools:ignore="MissingTranslation">P8_vitesse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_state_message">Aucun candidat</string>
    <string name="tab_all">Tous</string>
    <string name="tab_favorites">Favoris</string>
    <string name="search_hint">Rechercher un candidat</string>
    <string name="detail_screen_title">Ajouter un candidat</string>
    <string name="add_candidate">Ajouter un candidat</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="email">Email</string>
    <string name="expected_salary">Prétentions salariales</string>
    <string name="note">Notes</string>
    <string name="save">Sauvegarder</string>
    <string name="missing_fields_error">Champ obligatoire</string>
    <string name="invalid_email_format">Format invalide</string>
    <string name="favorite_candidates">Favoris</string>
    <string name="edit_icon">Modifier</string>
    <string name="delete_icon">Supprimer</string>
    <string name="delete_confirmation_title">Suppression</string>
    <string name="delete_confirmation_message">Etes-vous sûr de vouloir supprimer ce candidat ? Cette action est irréversible.</string>
    <string name="delete_confirmation">Confirmer</string>
    <string name="delete_cancel">Annuler</string>
    <string name="phone_icon">Appel</string>
    <string name="appel">Appel</string>
    <string name="sms">SMS</string>
    <string name="e_mail">E-mail</string>
    <string name="a_propos">A propos</string>
    <string name="birthday_date">jj/MM/aaaa</string>
    <string name="age_format">%1$d ans</string>
    <string name="pr_tentions_salariales">Prétentions salariales</string>
    <string name="soit">soit £</string>
    <string name="notes">Notes</string>
    <string name="edit_candidate">Modifier un candidat</string>
    <string name="card_title">Sélectionner une date</string>
    <string name="card_content_placeholder">Entrer une date</string>
    <string name="entrer_une_date">Entrer une date</string>
    <string name="candidate_photo">photo du candidat</string>
    <string name="candidate_name_placeholder">Prénom NOM</string>
    <string name="candidate_note_placeholder">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="favorite_icon">Favoris</string>
    <string name="first_name_icon">icone prenom</string>
    <string name="email_icon">icone email</string>
    <string name="card_icon">icone gateau</string>
    <string name="card_icon_inside">icone calendrier</string>
    <string name="next_field_icon">icone salaire</string>
    <string name="all_candidates">Tous</string>
    <string name="detail_screen_top_bar_name_text" translatable="false">Detail screen</string>
    <string name="navigation_back">retour</string>
    <string name="candidate_added_successfully">Candidat ajouté avec succès</string>
    <string name="anniversaire">Anniversaire</string>
    <string name="ans">ans</string>
    <string name="image_load_error">Impossible de charger l image</string>
    <string name="candidate_not_found">Candidat introuvable</string>
    <string name="error_saving_candidate">Erreur lors de la sauvegarde du candidat</string>
    <string name="candidate_updated_successfully">Candidat mis à jour avec succès</string>
    <string name="mandatory_fields_error">Veuillez remplir tous les champs obligatoires.</string>
    <string name="send_email">Envoyer un email</string>
    <string name="error_loading_candidate">Erreur lors du chargement du candidat</string>
    <string name="salary_format">soit £ %.2f</string>
    <string name="salary_conversion_error">Erreur lors de la conversion du salaire</string>
    <string name="error_favorite_toggle">Impossible de changer le statut favori</string>
    <string name="error_deleting_candidate">Erreur lors de la suppression du candidat</string>
    <string name="favorite_status_error">Impossible de changer le statut favori</string>
    <string name="delete_error_message">Erreur lors de la suppression du candidat</string>
    <string name="generic_error_message">Une erreur inconnue s est produite</string>
    <string name="favorite_status_update_error">Échec de la mise à jour du statut favori</string>
    <string name="add_fake_candidate">Ajout de candidats fictif</string>

</resources>