<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/contactPhoneButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_outline_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/appel" />

    </LinearLayout>


    <View
        android:layout_width="20dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/contactSmsButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sms" />

    </LinearLayout>

    <View
        android:layout_width="20dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/contactEmailButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_outline_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/e_mail" />

    </LinearLayout>


</LinearLayout>